<resources>
    <string name="app_name">COVID</string>
    <string name="covid_19_faq">Covid-19 FAQ</string>
    <string name="create_new_account">Create New Account</string>
    <string name="full_name">Full Name</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_register_login_here">Already register? Login here</string>
    <string name="phone_number">Phone Number</string>
    <string name="login_to_your_account">LogIn to your account</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user_create_account">New User? Create Account</string>
    <string name="welcome_to_the_dashboard">Welcome To the Dashboard</string>
    <string name="log_out">Log Out</string>
    <string name="forget_password">Forget Password?</string>
    <string name="email_not_verified">Email Not Verified</string>
    <string name="verify">Verify</string>
    <string name="covidstats">COVIdSTATS</string>
    <string name="welcome">Welcome</string>
    <string name="related_articles">Related Articles</string>
</resources>
