<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:background="@drawable/earth">

    <TextView
        android:id="@+id/title2"
        android:layout_width="269dp"
        android:layout_height="65dp"
        android:alpha="1"
        android:background="#00095EA1"
        android:fontFamily="sans-serif-condensed-medium"
        android:padding="5sp"
        android:paddingLeft="10sp"
        android:paddingTop="3sp"
        android:paddingRight="10sp"
        android:paddingBottom="3sp"
        android:text="@string/covid_19_faq"
        android:textColor="#E60F0F"
        android:textSize="42sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <TextView
        android:id="@+id/home2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/login_to_your_account"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title2"
        app:layout_constraintVertical_bias="0.058" />

    <EditText
        android:id="@+id/gvEmail2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:padding="10sp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home2"
        app:layout_constraintVertical_bias="0.209" />

    <EditText
        android:id="@+id/gvPassword2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10sp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gvEmail2"
        app:layout_constraintVertical_bias="0.093" />

    <Button
        android:id="@+id/signin2"
        android:layout_width="150dp"
        android:layout_height="38dp"
        android:padding="5sp"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gvPassword2"
        app:layout_constraintVertical_bias="0.22" />

    <TextView
        android:id="@+id/goToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/new_user_create_account"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin2"
        app:layout_constraintVertical_bias="0.338" />
</androidx.constraintlayout.widget.ConstraintLayout>