<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/earth"
    tools:context=".register">

    <TextView
        android:id="@+id/title"
        android:layout_width="269dp"
        android:layout_height="65dp"
        android:alpha="1"
        android:background="#00095EA1"
        android:fontFamily="sans-serif-condensed-medium"
        android:padding="5sp"
        android:paddingLeft="10sp"
        android:paddingTop="3sp"
        android:paddingRight="10sp"
        android:paddingBottom="3sp"
        android:text="Covid Updates"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#E60F0F"
        android:textSize="42sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <TextView
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/create_new_account"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.058" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:padding="10sp"
        android:textAllCaps="true"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home"
        app:layout_constraintVertical_bias="0.105" />

    <EditText
        android:id="@+id/gvEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:padding="10sp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etName"
        app:layout_constraintVertical_bias="0.07" />

    <EditText
        android:id="@+id/gvPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10sp"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gvEmail"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/aclonica"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColor="@android:color/black"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gvPassword"
        app:layout_constraintVertical_bias="0.111" />

    <Button
        android:id="@+id/register"
        android:layout_width="150dp"
        android:layout_height="38dp"
        android:padding="5sp"
        android:text="@string/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhone"
        app:layout_constraintVertical_bias="0.374" />

    <TextView
        android:id="@+id/goToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/aclonica"
        android:text="@string/already_register_login_here"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register"
        app:layout_constraintVertical_bias="0.325" />

    <ProgressBar
        android:id="@+id/indeterminateBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goToLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>